<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.yogesh.calculator.ui.MainActivity">

    <EditText
        android:id="@+id/et_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#000"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:fontFamily="sans-serif"
        android:gravity="end"
        android:maxLines="1"
        android:padding="24dp"
        android:scrollbars="horizontal"
        android:singleLine="true"
        android:text="-6-5+4*3^2"
        android:textColor="#fff"
        android:textSize="48sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000"
        android:shrinkColumns="*"
        android:stretchColumns="*">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                style="@style/FrameLayout"
                android:layout_column="0">

                <Button
                    android:id="@+id/btn_7"
                    style="@style/FrameLayout.Button"
                    android:text="7" />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout"
                android:layout_column="1">

                <Button
                    android:id="@+id/btn_8"
                    style="@style/FrameLayout.Button"
                    android:text="8" />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout"
                android:layout_column="2">

                <Button
                    android:id="@+id/btn_9"
                    style="@style/FrameLayout.Button"
                    android:text="9" />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout.color"
                android:layout_column="3">

                <Button
                    android:id="@+id/btn_ce"
                    style="@style/FrameLayout.Button.Color"
                    android:text="CE" />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout.color"
                android:layout_column="4">

                <Button
                    android:id="@+id/btn_cl"
                    style="@style/FrameLayout.Button.Color"
                    android:text="CL" />
            </FrameLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                style="@style/FrameLayout"
                android:layout_column="0">

                <Button
                    android:id="@+id/btn_4"
                    style="@style/FrameLayout.Button"
                    android:text="4" />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout"
                android:layout_column="1">

                <Button
                    android:id="@+id/btn_5"
                    style="@style/FrameLayout.Button"
                    android:text="5" />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout"
                android:layout_column="2">

                <Button
                    android:id="@+id/btn_6"
                    style="@style/FrameLayout.Button"
                    android:text="6" />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout.dark"
                android:layout_column="3">

                <Button
                    android:id="@+id/btn_mod"
                    style="@style/FrameLayout.Button"
                    android:text="%" />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout.dark"
                android:layout_column="4">

                <Button
                    android:id="@+id/btn_div"
                    style="@style/FrameLayout.Button"
                    android:text="/" />
            </FrameLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                style="@style/FrameLayout"
                android:layout_column="0">

                <Button
                    android:id="@+id/btn_1"
                    style="@style/FrameLayout.Button"
                    android:text="1" />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout"
                android:layout_column="1">

                <Button
                    android:id="@+id/btn_2"
                    style="@style/FrameLayout.Button"
                    android:text="2" />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout"
                android:layout_column="2">

                <Button
                    android:id="@+id/btn_3"
                    style="@style/FrameLayout.Button"
                    android:text="3" />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout.dark"
                android:layout_column="3">

                <Button
                    android:id="@+id/btn_pow"
                    style="@style/FrameLayout.Button"
                    android:text="^" />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout.dark"
                android:layout_column="4">

                <Button
                    android:id="@+id/btn_mul"
                    style="@style/FrameLayout.Button"
                    android:text="*" />
            </FrameLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                style="@style/FrameLayout"
                android:layout_column="0"
                android:layout_span="2">

                <Button
                    android:id="@+id/btn_0"
                    style="@style/FrameLayout.Button"
                    android:text="0" />
            </FrameLayout>


            <FrameLayout
                style="@style/FrameLayout"
                android:layout_column="2">

                <Button
                    android:id="@+id/btn_dot"
                    style="@style/FrameLayout.Button"
                    android:text="." />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout.dark"
                android:layout_column="3">

                <Button
                    android:id="@+id/btn_sub"
                    style="@style/FrameLayout.Button"
                    android:text="-" />
            </FrameLayout>

            <FrameLayout
                style="@style/FrameLayout.dark"
                android:layout_column="4">

                <Button
                    android:id="@+id/btn_add"
                    style="@style/FrameLayout.Button"
                    android:text="+" />
            </FrameLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <FrameLayout
                style="@style/FrameLayout"
                android:layout_column="0"
                android:layout_span="5">

                <Button
                    android:id="@+id/btn_res"
                    style="@style/FrameLayout.Button"
                    android:text="="
                    android:textSize="48sp" />
            </FrameLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>
