package com.yogesh.calculator.ui

import android.support.test.espresso.Espresso
import android.support.test.espresso.action.ViewActions.click
import android.support.test.espresso.assertion.ViewAssertions
import android.support.test.espresso.matcher.ViewMatchers
import android.support.test.espresso.matcher.ViewMatchers.withText
import android.support.test.rule.ActivityTestRule
import android.support.test.runner.AndroidJUnit4
import com.yogesh.calculator.R
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith

/**
 * Created by yogesh on 25/2/18.
 */
@RunWith(AndroidJUnit4::class)
class MainActivityTest {

    @Rule
    @JvmField
    val mActivityTestRule = ActivityTestRule(MainActivity::class.java)

    @Test
    fun testUi() {
        Espresso.onView(ViewMatchers.withId(R.id.et_result))
                .check(ViewAssertions.matches(ViewMatchers.withText("0")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_0))
                .check(ViewAssertions.matches(ViewMatchers.withText("0")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_1))
                .check(ViewAssertions.matches(ViewMatchers.withText("1")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_2))
                .check(ViewAssertions.matches(ViewMatchers.withText("2")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_3))
                .check(ViewAssertions.matches(ViewMatchers.withText("3")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_4))
                .check(ViewAssertions.matches(ViewMatchers.withText("4")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_5))
                .check(ViewAssertions.matches(ViewMatchers.withText("5")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_6))
                .check(ViewAssertions.matches(ViewMatchers.withText("6")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_7))
                .check(ViewAssertions.matches(ViewMatchers.withText("7")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_8))
                .check(ViewAssertions.matches(ViewMatchers.withText("8")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_9))
                .check(ViewAssertions.matches(ViewMatchers.withText("9")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_dot))
                .check(ViewAssertions.matches(ViewMatchers.withText(".")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_add))
                .check(ViewAssertions.matches(ViewMatchers.withText("+")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_sub))
                .check(ViewAssertions.matches(ViewMatchers.withText("-")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_div))
                .check(ViewAssertions.matches(ViewMatchers.withText("/")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_mul))
                .check(ViewAssertions.matches(ViewMatchers.withText("*")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_mod))
                .check(ViewAssertions.matches(ViewMatchers.withText("%")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_pow))
                .check(ViewAssertions.matches(ViewMatchers.withText("^")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_res))
                .check(ViewAssertions.matches(ViewMatchers.withText("=")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_ce))
                .check(ViewAssertions.matches(ViewMatchers.withText("CE")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_cl))
                .check(ViewAssertions.matches(ViewMatchers.withText("CL")))
    }

    @Test
    fun testKeyStrokes() {
        Espresso.onView(ViewMatchers.withId(R.id.btn_1))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_0))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_2))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_3))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_4))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_5))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_6))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_7))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_8))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_9))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_dot))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_add))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_mul))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_div))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_mod))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_pow))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_sub))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_sub))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_ce))
                .perform(click())

        Espresso.onView(ViewMatchers.withId(R.id.et_result))
                .check(ViewAssertions.matches(withText("1023456789.+*/%^-")))

        Espresso.onView(ViewMatchers.withId(R.id.btn_cl))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.et_result))
                .check(ViewAssertions.matches(withText("0")))
    }

    @Test
    fun testCalculation() {
        Espresso.onView(ViewMatchers.withId(R.id.btn_1))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_sub))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_2))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_res))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.et_result))
                .check(ViewAssertions.matches(withText("-1")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_cl))
                .perform(click())


        Espresso.onView(ViewMatchers.withId(R.id.btn_sub))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_2))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_res))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.et_result))
                .check(ViewAssertions.matches(withText("-2")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_cl))
                .perform(click())


        Espresso.onView(ViewMatchers.withId(R.id.btn_1))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_add))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_2))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_res))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.et_result))
                .check(ViewAssertions.matches(withText("3")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_cl))
                .perform(click())

        Espresso.onView(ViewMatchers.withId(R.id.btn_2))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_mul))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_3))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_res))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.et_result))
                .check(ViewAssertions.matches(withText("6")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_cl))
                .perform(click())

        Espresso.onView(ViewMatchers.withId(R.id.btn_4))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_div))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_2))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_res))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.et_result))
                .check(ViewAssertions.matches(withText("2")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_cl))
                .perform(click())

        Espresso.onView(ViewMatchers.withId(R.id.btn_2))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_mod))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_3))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_res))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.et_result))
                .check(ViewAssertions.matches(withText("2")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_cl))
                .perform(click())

        Espresso.onView(ViewMatchers.withId(R.id.btn_2))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_pow))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_3))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_res))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.et_result))
                .check(ViewAssertions.matches(withText("8")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_cl))
                .perform(click())


        Espresso.onView(ViewMatchers.withId(R.id.btn_2))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_dot))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_2))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_mul))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_3))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_res))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.et_result))
                .check(ViewAssertions.matches(withText("6.6")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_cl))
                .perform(click())


        Espresso.onView(ViewMatchers.withId(R.id.btn_sub))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_6))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_sub))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_5))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_add))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_4))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_mul))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_3))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_pow))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_2))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.btn_res))
                .perform(click())
        Espresso.onView(ViewMatchers.withId(R.id.et_result))
                .check(ViewAssertions.matches(withText("25")))
        Espresso.onView(ViewMatchers.withId(R.id.btn_cl))
                .perform(click())
    }

}